- added css atribute for crossed-text (line-through) - fixed delete-project-jump for non-administrators - deleted projects are invisible in non-administrator-lists; crossed in admin-lists

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -5,6 +5,26 @@ html,body {
 	height: 100%;
 }
 
+.italic {
+	font-style: italic;
+}
+
+.underline {
+	text-decoration: underline;
+}
+
+.crossed {
+	text-decoration: line-through;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.center {
+	text-align: center;
+}
+
 #main {
 	position: relative;
 	width: 980px;
@@ -208,21 +228,7 @@ ul#menu a:hover,ul#menu a:focus,ul#menu a:active {
 	margin-right: 0.5em;
 }
 
-.italic {
-	font-style: italic;
-}
 
-.underline {
-	text-decoration: underline;
-}
-
-.bold {
-	font-weight: bold;
-}
-
-.center {
-	text-align: center;
-}
 
 .red {
 	color: red;
